src/objects/Custom_Clone_Child_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>Child_Field_on_Parent__c</fullName>
        <label>Child Field on Parent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object_Api__c</fullName>
        <label>Child Object Api</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_User_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy User Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Apttus_Proposal__Proposal__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Lookup_Field__c</fullName>
        <label>Parent Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <label>Required Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Lookup_Field__c</fullName>
        <label>User Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Custom Clone Child Object</label>
    <pluralLabel>Custom Clone Child Objects</pluralLabel>
</CustomObject>